fix(example): correctly specify `minimumReleaseAge`

--- a/example/renovate-config.json
+++ b/example/renovate-config.json
@@ -23,7 +23,7 @@
         "lockFileMaintenance"
       ],
       "dependencyDashboardApproval": false,
-      "minimumReleaseAge": 0
+      "minimumReleaseAge": "1 day"
     }
   ]
 }
