--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -55,7 +55,7 @@
   "customManagers": [
     {
       "customType": "regex",
-      "managerFilePatterns": ["/^README\\.md$/"],
+      "managerFilePatterns": ["README.md"],
       "matchStrings": [
         "uses: renovatebot/github-action@(?<currentValue>[^\\s]+)"
       ],
@@ -64,7 +64,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["/^README\\.md$/"],
+      "managerFilePatterns": ["README.md"],
       "matchStrings": ["renovate-version: (?<currentValue>[^\\s]+)"],
       "depNameTemplate": "ghcr.io/renovatebot/renovate",
       "datasourceTemplate": "docker"
@@ -72,7 +72,7 @@
     {
       "description": "Update renovate version in action.yml",
       "customType": "regex",
-      "managerFilePatterns": ["/^action\\.yml$/"],
+      "managerFilePatterns": ["action.yml"],
       "matchStrings": ["default: '(?<currentValue>[^\\s]+)' # renovate"],
       "depNameTemplate": "ghcr.io/renovatebot/renovate",
       "datasourceTemplate": "docker"
@@ -80,7 +80,7 @@
     {
       "description": "Update renovate version in src/docker.ts",
       "customType": "regex",
-      "managerFilePatterns": ["/^src/docker\\.ts$/"],
+      "managerFilePatterns": ["src/docker.ts"],
       "matchStrings": ["version = '(?<currentValue>[^\\s]+)'; // renovate"],
       "depNameTemplate": "ghcr.io/renovatebot/renovate",
       "datasourceTemplate": "docker"
