feat!: require node v24

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   },
   "packageManager": "pnpm@10.28.1",
   "engines": {
-    "node": "^20.9.0 || ^22.11.0 || ^24.11.0",
+    "node": ">=24.11.0",
     "pnpm": "^10.0.0"
   },
   "pnpm": {
